--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>My web portfolio</title>
 </head>
 <body>
-<h1>HELLO!</h1>    
+<h1>HELLO!</h1>
+My name is Yurii    
 </body>
 </html>
