--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
     <title>My web portfolio</title>
 </head>
 <body>
-<h1>HELLO!</h1>
-My name is Yurii    
+    <header class="navigation-header">
+        <nav>
+            <div class="logo-container">
+                <a href="./index.html">Logo</a>
+            </div>
+            <div class="navigation-items" id="navigation-items">
+                <a href="/index.html">Home</a>
+                <a href="/blog/index.html">Blog</a>
+                <a href="/projects/index.html">Projects</a>
+                <a href="/contact/index.html">Contact Me</a>
+            </div>
+            <div class="hamburger">
+                <span id="openHam">&#9776;</span>
+                <span id="closeHam">&#x2716;</span>
+            </div>
+        </nav>
+       </header>
 </body>
 </html>
