nav url changed

--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <title>My web portfolio</title>
+    <title>Web portfolio of Yurii Masalitin</title>
 </head>
 <body>
     <header class="navigation-header">
         <nav>
             <div class="logo-container">
-                <a href="./index.html">Logo</a>
+                <a href="/index.html">Logo</a>
             </div>
             <div class="navigation-items" id="navigation-items">
                 <a href="/index.html">Home</a>
@@ -26,6 +26,11 @@
                 <span id="closeHam">&#x2716;</span>
             </div>
         </nav>
-       </header>
+    </header>
+    <article>
+        <h1>Web Portfolio of Yurii Masalitin</h1>
+        <p>Write anything you want to tell the world.</p>
+    </article>
+
 </body>
 </html>
