--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     <article>
         <h1>Web Portfolio of Yurii Masalitin</h1>
         <p>Write anything you want to tell the world.</p>
+        <h2>Welcome!</h2>
+        <p>Thanks for stopping by.</p>
+        <p>Please have a look around. In the blog section I document my experiences in programming. You may also look at my web projects. Have Fun.</p>
+        <img src="yurii.jpg" alt="Picture of me">
+        <p>Yurii :-)</p>
     </article>
 
 </body>
