--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="navigation-header">
         <nav>
             <div class="logo-container">
-                <a href="/index.html"><img src="/img/logo.png" alt="logo"></a>
+                <a href="/index.html">YURII</a>
             </div>
             <div class="navigation-items" id="navigation-items">
                 <a href="/index.html">Home</a>
