--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <section>
-        <div id="hero">
+        <div id="hero" class="gradient-background">
             HERO HERE
         </div>
     </section>
