--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <script src="/js/nav.js"></script>
     <title>Web portfolio of Yurii Masalitin</title>
 </head>
 <body>
@@ -16,10 +17,10 @@
                 <a href="/index.html">YURII</a>
             </div>
             <div class="navigation-items" id="navigation-items">
-                <a href="/index.html">Home</a>
-                <a href="/blog/index.html">Blog</a>
-                <a href="/projects/index.html">Projects</a>
-                <a href="/contact/index.html">Contact Me</a>
+                <a href="/">Home</a>
+                <a href="/blog">Blog</a>
+                <a href="/projects">Projects</a>
+                <a href="/contact">Contact Me</a>
             </div>
             <div class="hamburger">
                 <span id="openHam">&#9776;</span>
@@ -28,7 +29,7 @@
         </nav>
     </header>
     <section>
-        <div id="hero" class="gradient-background">
+        <div id="hero" class="gradient-background container">
             HERO HERE
         </div>
     </section>
