--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="navigation-header">
         <nav>
             <div class="logo-container">
-                <a href="/index.html">YURII</a>
+                <a href="/index.html">YURII M.</a>
             </div>
             <div class="navigation-items" id="navigation-items">
                 <a href="/">Home</a>
