--- a/index.html
+++ b/index.html
@@ -2,32 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <script src="/js/nav.js"></script>
+    <link rel="stylesheet" href="/css/main.css">
+
     <title>Web portfolio of Yurii Masalitin</title>
 </head>
 <body>
-    <header class="navigation-header">
-        <nav>
-            <div class="logo-container">
-                <a href="/index.html">YURII M.</a>
-            </div>
-            <div class="navigation-items" id="navigation-items">
-                <a href="/">Home</a>
-                <a href="/blog">Blog</a>
-                <a href="/projects">Projects</a>
-                <a href="/contact">Contact Me</a>
-            </div>
-            <div class="hamburger">
-                <span id="openHam">&#9776;</span>
-                <span id="closeHam">&#x2716;</span>
-            </div>
-        </nav>
-    </header>
+    <header>
+        <div class="logo">
+          <h1 class="logo-text">YURII M.</h1>
+          <button class="hamburger-icon">
+            <label for="dropdown">
+              <i class="fa-solid fa-bars"></i>
+              <i class="fa-solid fa-x"></i>
+            </label>
+            <input type="checkbox" id="dropdown" />
+          </button>
+        </div>
+        <ul class="navigation">
+          <li><a href="/">Home</a></li>
+          <li><a href="/blog">Blog</a></li>
+          <li><a href="/projects">Projects</a></li>
+          <li><a href="/contact">Contact</a>Contact</li>
+        </ul>
+      </header>
+      
+      <main>
+        <div class="container hero gradient-background">
+        <p>This is container 1</p>
+      </main>
     <section>
         <div id="hero" class="gradient-background container">
             HERO HERE
@@ -44,6 +51,8 @@
             <p>Yurii :-)</p>
         </article>
     </section>
-
+    <footer>
+        &lt;The footer&gt;
+    </footer>
 </body>
 </html>
