--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+        <div class="container-lg">
         <div class="logo">
           <h1 class="logo-text">YURII M.</h1>
           <button class="hamburger-icon">
@@ -26,9 +27,14 @@
         <ul class="navigation">
           <li><a href="/">Home</a></li>
           <li><a href="/blog">Blog</a></li>
+            <ul>
+                <li><a href="/blog/first-entry/">First entry</a></li>
+                <li><a href="/blog/second-entry/">Second entry</a></li>
+            </ul>
           <li><a href="/projects">Projects</a></li>
           <li><a href="/contact">Contact</a></li>
         </ul>
+        </div>
       </header>
       
       <main>
