--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 <body>
     <header>
+        <div class="container-lg">
         <div class="logo">
           <h1 class="logo-text">YURII M.</h1>
           <button class="hamburger-icon">
@@ -36,27 +37,18 @@
           <li><a href="/projects">Projects</a></li>
           <li><a href="/contact">Contact</a></li>
         </ul>
+        </div>
       </header>
       
-      <main>
-        <div class="container hero gradient-background">
-        <p>This is container 1</p>
-      </main>
     <section>
         <div id="hero" class="gradient-background container">
-            HERO HERE
-        </div>
-    </section>
-    <section>
-        <article>
             <h1>Web Portfolio of Yurii Masalitin</h1>
             <p>Write anything you want to tell the world.</p>
             <h2>Welcome!</h2>
             <p>Thanks for stopping by.</p>
             <p>Please have a look around. In the blog section I document my experiences in programming. You may also look at my web projects. Have Fun.</p>
             <img src="yurii.jpg" alt="Picture of me">
-            <p>Yurii :-)</p>
-        </article>
+            <p>Yurii :-)</p>        </div>
     </section>
     <footer>
         &lt;The footer&gt;
