--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
           <li><a href="/projects">Projects</a></li>
           <li><a href="/contact">Contact</a></li>
         </ul>
+        <div class="socials">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
       </header>
       
     <section>
