--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
 </section>
 
     <footer>
-        &lt;The footer&gt;
+      <div class="socials">
+        <a href="#"><i class="fa-brands fa-facebook fa-xl"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
+        <a href="#"><i class="fa-brands fa-linkedin fa-xl"></i></a>
+      </div>
     </footer>
 </body>
 </html>
