--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 </section>
 
     <footer>
+      <div class="copyright">Emmetten 2024</div>
       <div class="socials">
         <a href="#"><i class="fa-brands fa-facebook fa-xl"></i></a>
         <a href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
