--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h2>Welcome!</h2>
             <p>Thanks for stopping by.</p>
             <p>Please have a look around. In the blog section I document my experiences in programming. You may also look at my web projects. Have Fun.</p>
-            <img src="yurii.jpg" alt="Picture of me">
+            <img class="rounded-border" src="img/me.png" alt="Picture of me">
             <p>Yurii :-)</p>        </div>
     </section>
     <section>
@@ -60,21 +60,9 @@
           <h2>Welcome!</h2>
           <p>Thanks for stopping by.</p>
           <p>Please have a look around. In the blog section I document my experiences in programming. You may also look at my web projects. Have Fun.</p>
-          <img src="yurii.jpg" alt="Picture of me">
+          <img class="rounded-border" src="img/me.png" alt="Picture of me">
           <p>Yurii :-)</p>        </div>
-  </section>
-
-  <section>
-    <div id="hero" class="gradient-background container">
-        <h1>Web Portfolio of Yurii Masalitin</h1>
-        <p>Write anything you want to tell the world.</p>
-        <h2>Welcome!</h2>
-        <p>Thanks for stopping by.</p>
-        <p>Please have a look around. In the blog section I document my experiences in programming. You may also look at my web projects. Have Fun.</p>
-        <img src="yurii.jpg" alt="Picture of me">
-        <p>Yurii :-)</p>        </div>
-</section>
-
+    </section>
     <footer>
       <div class="copyright">Emmetten 2024</div>
       <div class="socials">
