--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h2>Welcome!</h2>
             <p>Thanks for stopping by.</p>
             <p>Please have a look around. In the blog section I document my experiences in programming. You may also look at my web projects. Have Fun.</p>
-            <img class="rounded-border" src="img/me.png" alt="Picture of me">
+            <img class="rounded-border" src="img/me-gs.png" alt="Picture of me">
             <p>Yurii :-)</p>        </div>
     </section>
     <section>
@@ -60,7 +60,7 @@
           <h2>Welcome!</h2>
           <p>Thanks for stopping by.</p>
           <p>Please have a look around. In the blog section I document my experiences in programming. You may also look at my web projects. Have Fun.</p>
-          <img class="rounded-border" src="img/me.png" alt="Picture of me">
+          <img class="rounded-border" src="img/me-gs.png" alt="Picture of me">
           <p>Yurii :-)</p>        </div>
     </section>
     <footer>
