--- a/index.html
+++ b/index.html
@@ -55,13 +55,17 @@
     </section>
     <section>
       <div id="hero" class="gradient-background container">
+        <div class="halb">
           <h1>Web Portfolio of Yurii Masalitin</h1>
           <p>Write anything you want to tell the world.</p>
           <h2>Welcome!</h2>
           <p>Thanks for stopping by.</p>
           <p>Please have a look around. In the blog section I document my experiences in programming. You may also look at my web projects. Have Fun.</p>
+        </div>
+        <div class="halb">
           <img class="rounded-border" src="img/me-gs.png" alt="Picture of me">
-          <p>Yurii :-)</p>        </div>
+        </div>
+      </div>
     </section>
     <footer>
       <div class="copyright">Emmetten 2024</div>
