--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         <div id="hero" class="gradient-background container">
           <div class="halb">
             <h1>Web Portfolio of Yurii Masalitin</h1>
-            <p>Write anything you want to tell the world.</p>
+            <p>This is a simple sample html site without using a css framework based on an assignment for Powercoders Bootcamp</p>
+            
             <h2>Welcome!</h2>
             <p>Thanks for stopping by.</p>
             <p>Please have a look around. In the blog section I document my experiences in programming. You may also look at my web projects. Have Fun.</p>
