--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
           <div class="halb">
             <h1>Web Portfolio of Yurii Masalitin</h1>
             <p>This is a simple sample html site without using a css framework based on an assignment for Powercoders Bootcamp</p>
-            
+
             <h2>Welcome!</h2>
             <p>Thanks for stopping by.</p>
-            <p>Please have a look around. In the blog section I document my experiences in programming. You may also look at my web projects. Have Fun.</p>
+            <p>Please have a look around. In the <a href="/blog/">blog</a> section I document my experiences in programming. 
+              You may also look at my <a href="/projects">web projects</a>. Have Fun.</p>
           </div>
           <div class="halb">
             <img class="rounded-border" src="img/me-gs.png" alt="Picture of me">
