--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </header>
         <section>
           <div id="hero" class="gradient-background container">
-            <div class="halb">
+            <div class="greet">
               <h1>Web Portfolio of Yurii Masalitin</h1>
               <p>This is a simple sample html site without using a css framework based on an assignment for Powercoders Bootcamp</p>
 
@@ -53,7 +53,7 @@
               <p>Please have a look around. In the <a href="/blog/">blog</a> section I document my experiences in programming. 
                 You may also look at my <a href="/projects">web projects</a>. Have Fun.</p>
             </div>
-            <div class="halb">
+            <div class="me-photo">
               <img class="rounded-border" src="img/me-gs.png" alt="Picture of me">
             </div>
           </div>
