fix project img url

--- a/projects/index.html
+++ b/projects/index.html
@@ -54,7 +54,7 @@
                 You may also look at my <a href="/projects">web projects</a>. Have Fun.</p>
             </div>
             <div class="me-photo">
-              <img class="rounded-border" src="img/me-gs.png" alt="Picture of me">
+              <img class="rounded-border" src="../img/me-gs.png" alt="Picture of me">
             </div>
           </div>
         </section>
