--- a/projects/index.html
+++ b/projects/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
 
-    <title>Web portfolio of Yurii Masalitin</title>
+    <title>Projects - Web portfolio of Yurii Masalitin</title>
 </head>
 <body>
       <header>
