--- a/contact/index.html
+++ b/contact/index.html
@@ -43,7 +43,7 @@
           </div>
         </header>
         <section>
-          <div id="page" class="container">
+          <div id="page">
             <h1>Contact</h1>
             
             <p>
