--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
         </header>
         <section>
-          <div id="hero" class="gradient-background container">
+          <div id="hero" class="gradient-background">
             <div class="greet">
               <h1>Web Portfolio of Yurii Masalitin</h1>
               <p>This is a simple sample html site without using a css framework based on an assignment for Powercoders Bootcamp</p>
