projects page complete

--- a/projects/index.html
+++ b/projects/index.html
@@ -43,19 +43,9 @@
           </div>
         </header>
         <section>
-          <div id="hero" class="gradient-background container">
-            <div class="greet">
-              <h1>Web Portfolio of Yurii Masalitin</h1>
-              <p>This is a simple sample html site without using a css framework based on an assignment for Powercoders Bootcamp</p>
-
-              <h2>Welcome!</h2>
-              <p>Thanks for stopping by.</p>
-              <p>Please have a look around. In the <a href="/blog/">blog</a> section I document my experiences in programming. 
-                You may also look at my <a href="/projects">web projects</a>. Have Fun.</p>
-            </div>
-            <div class="me-photo">
-              <img class="rounded-border" src="../img/me-gs.png" alt="Picture of me">
-            </div>
+          <div id="page">
+            <h1>Projects</h1>
+            <p>Here you will soon find my web projects.</p>
           </div>
         </section>
       <footer id="footer">
