--- a/contact/index.html
+++ b/contact/index.html
@@ -39,8 +39,7 @@
           <div class="socials">
               <a href="#"><i class="fa-brands fa-facebook fa-xl"></i></a>
               <a href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
-              <a href="#"><i class="fa-brands fa-linkedin fa-xl"></i></a>
-          </div>
+              <a target="_blank" href="https://ch.linkedin.com/in/yurii-masalitin"><i class="fa-brands fa-linkedin fa-xl"></i></a>          </div>
         </header>
         <section>
           <div id="page">
@@ -61,7 +60,7 @@
           <div class="socials">
             <a href="#"><i class="fa-brands fa-facebook fa-xl"></i></a>
             <a href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin fa-xl"></i></a>
+            <a target="_blank" href="https://ch.linkedin.com/in/yurii-masalitin"><i class="fa-brands fa-linkedin fa-xl"></i></a>
           </div>
       </footer>
 
