--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="socials">
       <a href="#"><i class="fa-brands fa-facebook fa-xl"></i></a>
       <a href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
-      <a href="#"><i class="fa-brands fa-linkedin fa-xl"></i></a>
+      <a target="_blank" href="https://ch.linkedin.com/in/yurii-masalitin"><i class="fa-brands fa-linkedin fa-xl"></i></a>
     </div>
   </header>
   <section>
@@ -62,8 +62,7 @@
       <div class="socials">
         <a href="#"><i class="fa-brands fa-facebook fa-xl"></i></a>
         <a href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
-        <a href="#"><i class="fa-brands fa-linkedin fa-xl"></i></a>
-      </div>
+        <a target="_blank" href="https://ch.linkedin.com/in/yurii-masalitin"><i class="fa-brands fa-linkedin fa-xl"></i></a>      </div>
   </footer>
 </body>
 </html>
